--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,43 @@
-/* Created by: Mr. Coxall
-* Created on: Sep 2020
-* This file contains the CSS for index.html
-*/
+html{
+  background-color: #e6e6e6;
+}
+
+h1{
+  padding: 20px;
+  position:relative;
+  bottom: 20px;
+  right:10px;
+  background-color: #f0f0f0;
+}
+.Logo{
+  width: 300px;
+  position:relative;
+  top: 10px;
+}
+.Select {
+  width: 110px;
+  position:static;
+}
+/* Table styles */
+.Progress{
+  position:relative;
+  bottom: 42px;
+  right: 10px;
+  margin: 0;
+  padding: 0;
+  background-color: #d1d1d1;
+  width: 150px;
+  height: 100%;
+}
+
+tr{
+  height: 233px;
+}
+th{
+  border:solid;
+  border-width: 2px;
+  border-color: dimgrey;
+  color: rgba(0, 0, 0, 0);
+  width: 100%;
+  height: 100%;;
+}
