--- a/css/style.css
+++ b/css/style.css
@@ -3,10 +3,10 @@ html{
 }
 
 h1{
-  padding: 20px;
+  padding: 30px;
   position:relative;
   bottom: 20px;
-  right:10px;
+  left:10px;
   background-color: #f0f0f0;
 }
 .Logo{
@@ -22,41 +22,43 @@ h1{
   width: 60px;
   position:static;
 }
+.soda{
+  width: 50px;
+}
 .Select3 {
   width: 80px;
   position:static;
 }
 .text1{
-  float: left;
   width: 230px;
 }
 .text2{
-  float: left;
   width: 420px;
 }
 h2{
-  float: left;
   font-weight: 800;
   font-size: 35px;
 }
 select{
+  position: absolute;
   float: left;
 }
 /* Table styles */
 .Progress{
-  position:relative;
-  bottom: 42px;
+  position:fixed;
+  float: top;
   right: 10px;
   margin: 0;
   padding: 0;
   width: 150px;
-  height: 100%;
+  height: 200px;
 }
-
-tr{
-  height: 233px;
+.soda,.SodaDisplay { display: inline-block; }
+.dark{
+  background-color: gray;
 }
 .ProgTH{
+  position: static;
   background-color: #d1d1d1;
   border:solid;
   border-width: 2px;
