--- a/css/style.css
+++ b/css/style.css
@@ -1,59 +1,70 @@
-html{
+html {
   background-color: #e6e6e6;
 }
 
-h1{
+h1 {
   padding: 30px;
-  position:relative;
+  position: relative;
   bottom: 20px;
-  left:10px;
+  left: 10px;
   background-color: #f0f0f0;
 }
-.Logo{
+
+.Logo {
   width: 300px;
-  position:relative;
+  position: relative;
   top: 10px;
 }
+
 .Select1 {
   width: 110px;
-  position:static;
+  position: static;
 }
+
 .Select2 {
   width: 60px;
-  position:static;
+  position: static;
 }
-.Toppings{
-  margin:0;
+
+.Toppings {
+  margin: 0;
 }
-.ToppingName{
-  margin:0;
+
+.ToppingName {
+  margin: 0;
   font-size: 25px;
 }
 
-.soda{
+.soda {
   width: 50px;
 }
+
 .Select3 {
   width: 80px;
-  position:static;
+  position: static;
 }
-.text1{
+
+.text1 {
   width: 230px;
 }
-.text2{
+
+.text2 {
   width: 420px;
 }
-h2{
+
+h2 {
   font-weight: 800;
   font-size: 35px;
 }
-select{
+
+select {
   position: absolute;
   float: left;
 }
+
 /* Table styles */
-.Progress{
-  position:fixed;
+.Progress {
+  position: fixed;
   float: top;
   right: 10px;
   margin: 0;
@@ -61,17 +72,24 @@ select{
   width: 150px;
   height: 200px;
 }
-.soda,.SodaDisplay { display: inline-block; }
-.dark{
+
+.soda,
+.SodaDisplay {
+  display: inline-block;
+}
+
+.dark {
   background-color: gray;
 }
-.ProgTH{
+
+.ProgTH {
   position: static;
   background-color: #d1d1d1;
-  border:solid;
+  border: solid;
   border-width: 2px;
   border-color: dimgrey;
   color: rgba(0, 0, 0, 0);
   width: 100%;
-  height: 100%;;
+  height: 100%;
+  ;
 }
