--- a/css/style.css
+++ b/css/style.css
@@ -65,8 +65,7 @@ h2 {
   height: 200px;
 }
 /*Soda select element style*/
-.soda,
-.SodaDisplay {
+.soda,.SodaDisplay {
   display: inline-block;
 }
 /*Drinks display underline text style*/
@@ -83,5 +82,4 @@ h2 {
   color: rgba(0, 0, 0, 0);
   width: 100%;
   height: 100%;
-  ;
 }
